force-app/main/default/objects/LeadOppScore__Lead_Opportunity_Scoring_Rule__c/LeadOppScore__Lead_Opportunity_Scoring_Rule__c.object-meta.xml
<CustomObject>
    <label>Scoring Rules</label>
    <nameField>
        <displayFormat>LO-{0000}</displayFormat>
        <label>Lead Opportunity Scoring Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scoring Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>