force-app/main/default/objects/LeadOppScore__Lead_Opportunity_Scoring_Rule__c/fields/LeadOppScore__Active__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>