force-app/main/default/objects/LeadOppScore__Lead_Opportunity_Scoring_Rule__c/fields/LeadOppScore__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>