force-app/main/default/objects/LeadOppScore__Lead_Opportunity_Scoring_Rule__c/fields/LeadOppScore__Global_Constants__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Global_Constants__c</fullName>
    <label>Global Constants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LeadOppScore__Global_Constants</valueSetName>
    </valueSet>
</CustomField>