force-app/main/default/objects/LeadOppScore__Lead_Opportunity_Scoring_Rule__c/fields/LeadOppScore__Operator__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
                <label>Equals To</label>
            </value>
            <value>
                <fullName>!=</fullName>
                <label>Not Equals To</label>
            </value>
            <value>
                <fullName>&lt;</fullName>
                <label>Less Than</label>
            </value>
            <value>
                <fullName>&gt;</fullName>
                <label>Greater Than</label>
            </value>
            <value>
                <fullName>&lt;=</fullName>
                <label>Less Than Equals To</label>
            </value>
            <value>
                <fullName>&gt;=</fullName>
                <label>Greater Than Equals To</label>
            </value>
            <value>
                <fullName>GlobalStringEquals</fullName>
                <isActive>false</isActive>
                <label>GlobalStringEquals</label>
            </value>
            <value>
                <fullName>GlobalStringNotEquals</fullName>
                <isActive>false</isActive>
                <label>GlobalStringNotEquals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>