force-app/main/default/objects/LeadOppScore__Lead_Opportunity_Scoring_Rule__c/fields/LeadOppScore__Rule_Object__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Rule_Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LeadOppScore__Object_Name</valueSetName>
    </valueSet>
</CustomField>