force-app/main/default/objects/LeadOppScore__Lead_Opportunity_Scoring_Rule__c/fields/LeadOppScore__Rule_Score__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Rule_Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>