force-app/main/default/objects/LeadOppScore__Lead_Opportunity_Scoring_Rule__c/fields/LeadOppScore__Scoring_Criteria_Title__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Scoring_Criteria_Title__c</fullName>
    <label>Scoring Rule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>