force-app/main/default/objects/LeadOppScore__Lead_Opportunity_Scoring_Rule__c/fields/LeadOppScore__Type__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LeadOppScore__Type</valueSetName>
    </valueSet>
</CustomField>